[package]
name = "httpdir"
version = "0.1.0"
authors = ["jomsch <jomsch@jomsch.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.13.0"
async-std = { version="1.6.5", features=["attributes"] }
log = "0.4.11"
env_logger = "0.8.1"
futures = "0.3.6"
clap = "2.33.3"
